--- a/front_end/index.html
+++ b/front_end/index.html
@@ -116,14 +116,19 @@
             <div data-note="B7" class="key white"><span>j</span></div>
         </div>
         
+
         <footer>
             <button id="next">Next</button>
             <button id="prev">Previous</button>
 
-            <button id="startRecording">Start Recording</button>
-            <button id="stopRecording">Stop Recording</button>
+            <button id="preview">Preview</button>
+            <button id="export">Export current</button>
+            <input type="file" id="importMusicFile">
+            <button type="button" id="share">Share</button>
         </footer>
     </div>
+    
+    <div id="history"></div>
     <script src="index.js"></script>
 </body>
 </html>
